# cifar_classifier

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
project/: bot.py
project/server/: config.py
project/server/model/: model.py  predict.py  save_load.py  train.py
